--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/_app/immutable/assets/0.Dcbv1hYR.css" rel="stylesheet">
-		<link href="/_app/immutable/assets/2.JlUgM6Lr.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Q-Cy0Pzs.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C0NwaIIB.js">
+		<link href="/_app/immutable/assets/0.B_TOGsGU.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/2.wdBAC1gh.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.B8faQZF2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BEfVROja.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.BS2VFAKx.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Dz9DJSEd.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BOajpcjX.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.XcPP_z2V.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/props._MvZxP_d.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/this.tYzeZrfs.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DJa69f8X.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BLS-TQtw.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DWGbTsf_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/style.SooREwII.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/size.DirvPxVD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.ZJuK4sHN.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/2.CbQ6hdOn.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/2.Bo0HqpKx.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Fuzling.CVUM7QAH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.Bof2v9lb.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.rnm_OHBI.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -39,11 +39,11 @@
 <!----><!--]--><!--]--><title>@ryanatkn/fuz_template</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!----><main class="svelte-aa2n4y"><section class="box"><header class="box pt_xl"><svg viewBox="0 0 100 100" aria-label="a friendly pixelated spider facing you" style="width: var(--icon_size_xl); height: var(--icon_size_xl);"><g><path d="m 25,81.200002 h 6.2 v -12.5 h 6.3 v -18.7 h -6.3 v 6.2 H 12.5 v 6.3 H 0 v -6.3 h 6.2 v -6.2 H 25 v -6.3 h 12.5 v -6.2 h -6.3 v -6.3 H 18.7 v -6.2 H 6.2 v -6.3 H 25 v 6.3 h 12.5 v -6.3 H 31.2 V 6.2 h 6.3 v 6.300002 h 6.2 V 31.200001 H 56.2 V 12.500002 h 6.3 V 6.2 h 6.2 v 12.500001 h -6.2 v 18.800001 h 6.2 v -12.5 h 12.5 v -12.5 h 12.5 v 6.2 h -6.2 v 12.5 H 75 v 12.5 h 6.2 v 6.3 h 12.5 v 6.2 h 6.299997 v 6.3 H 87.5 v -6.3 H 75 v -6.2 h -6.3 v 12.5 H 75 v 12.5 h 6.2 V 99.99999 H 75 V 81.200002 h -6.3 v -12.5 h -6.2 v -12.5 H 43.7 v 18.8 h -6.2 v 12.5 H 31.2 V 99.99999 H 25 Z" style="fill: #f67c4c;"></path></g></svg><!----> <h1 class="mt_xl2">fuz_template</h1></header> <!----><a  class="card svelte-1s6rl33 link left" href="/about"><!--[--><div class="icon svelte-1s6rl33"><!--[-->🐶<!--]--></div><!--]--> <div class="content svelte-1s6rl33"><!---->about<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <button type="button" class="svelte-w47sn9">mreow</button> <div class="mreows svelte-w47sn9"><!--[--><!--]--></div><!----></main><!----><!----> <!--[!--><!--]--><!----><!--]--> <!--[--><div class="contextmenu_layout svelte-aif9y6" aria-hidden="true"></div><!--]--> <!--[!--><!--]--><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!----><main class="svelte-aa2n4y"><section class="box"><header class="box pt_xl"><svg viewBox="0 0 100 100" aria-label="a friendly pixelated spider facing you" style="width: var(--icon_size_xl); height: var(--icon_size_xl);"><g><path d="m 25,81.200002 h 6.2 v -12.5 h 6.3 v -18.7 h -6.3 v 6.2 H 12.5 v 6.3 H 0 v -6.3 h 6.2 v -6.2 H 25 v -6.3 h 12.5 v -6.2 h -6.3 v -6.3 H 18.7 v -6.2 H 6.2 v -6.3 H 25 v 6.3 h 12.5 v -6.3 H 31.2 V 6.2 h 6.3 v 6.300002 h 6.2 V 31.200001 H 56.2 V 12.500002 h 6.3 V 6.2 h 6.2 v 12.500001 h -6.2 v 18.800001 h 6.2 v -12.5 h 12.5 v -12.5 h 12.5 v 6.2 h -6.2 v 12.5 H 75 v 12.5 h 6.2 v 6.3 h 12.5 v 6.2 h 6.299997 v 6.3 H 87.5 v -6.3 H 75 v -6.2 h -6.3 v 12.5 H 75 v 12.5 h 6.2 V 99.99999 H 75 V 81.200002 h -6.3 v -12.5 h -6.2 v -12.5 H 43.7 v 18.8 h -6.2 v 12.5 H 31.2 V 99.99999 H 25 Z" style="fill: #f67c4c;"></path></g></svg><!----> <h1 class="mt_xl2">fuz_template</h1></header> <!----><a  class="card svelte-1u0x3y1 link left" href="/about"><!--[--><div class="icon svelte-1u0x3y1"><!--[-->🦄<!--]--></div><!--]--> <div class="content svelte-1u0x3y1"><!---->about<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <button type="button" class="svelte-w47sn9">mreow</button> <div class="mreows svelte-w47sn9"><!--[--><!--]--></div><!----></main><!----><!----> <!--[!--><!--]--><!----><!--]--> <!--[--><div class="contextmenu_layout svelte-aif9y6" aria-hidden="true"></div><!--]--> <!--[!--><!--]--><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_whqahd = {
+					__sveltekit_oq5ijg = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Q-Cy0Pzs.js"),
-						import("/_app/immutable/entry/app.Dz9DJSEd.js")
+						import("/_app/immutable/entry/start.B8faQZF2.js"),
+						import("/_app/immutable/entry/app.BOajpcjX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
