--- a/about.html
+++ b/about.html
@@ -6,22 +6,22 @@
 		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/_app/immutable/assets/0.Dcbv1hYR.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.B_TOGsGU.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.bkr4jdG-.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Q-Cy0Pzs.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C0NwaIIB.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.B8faQZF2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BEfVROja.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.BS2VFAKx.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Dz9DJSEd.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BOajpcjX.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.XcPP_z2V.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/props._MvZxP_d.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/this.tYzeZrfs.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DJa69f8X.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BLS-TQtw.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DWGbTsf_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/style.SooREwII.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/size.DirvPxVD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.ZJuK4sHN.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.Cm29rapx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.Bof2v9lb.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.BnCIn2lx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.rnm_OHBI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Fuzling.CVUM7QAH.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
@@ -53,7 +53,7 @@
 			
 			<script>
 				{
-					__sveltekit_whqahd = {
+					__sveltekit_oq5ijg = {
 						base: ""
 					};
 
@@ -62,8 +62,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Q-Cy0Pzs.js"),
-						import("/_app/immutable/entry/app.Dz9DJSEd.js")
+						import("/_app/immutable/entry/start.B8faQZF2.js"),
+						import("/_app/immutable/entry/app.BOajpcjX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
