--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
 		
 		<link href="/_app/immutable/assets/0.DBnv88D6.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.CkbAh0GA.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B-jCKABx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C0Qb_YT7.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DeGH4IwZ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DPujAVoR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.MNSK3z1j.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BjL0yZol.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.hMRDILeA.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BTIBTwaW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/props.C_cCTirz.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/this.Cz30Kl2t.js">
@@ -20,8 +20,8 @@
 		<link rel="modulepreload" href="/_app/immutable/chunks/style.DMr-S-uD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/size.BJGWoKDx.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.ZJuK4sHN.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.DsYVLEfO.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.BSRq8B2Q.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.BmwFNlYD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.CXuqZByk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Fuzling.DBFjSCgf.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
@@ -53,7 +53,7 @@
 			
 			<script>
 				{
-					__sveltekit_1t8zf95 = {
+					__sveltekit_fvuys7 = {
 						base: ""
 					};
 
@@ -62,8 +62,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B-jCKABx.js"),
-						import("/_app/immutable/entry/app.BjL0yZol.js")
+						import("/_app/immutable/entry/start.DeGH4IwZ.js"),
+						import("/_app/immutable/entry/app.hMRDILeA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
