--- a/about.html
+++ b/about.html
@@ -6,23 +6,23 @@
 		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/_app/immutable/assets/0.DBnv88D6.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.XLspSEnm.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.CkbAh0GA.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DeGH4IwZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DPujAVoR.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.MNSK3z1j.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.hMRDILeA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BTIBTwaW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.C_cCTirz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.Cz30Kl2t.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.C_Ue8ehP.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.Td8fH55z.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/style.DMr-S-uD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/size.BJGWoKDx.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DGR6T058.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.ByDNMYFq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.BrhKfosJ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C9jusHoJ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.DVjyfTb0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.nG8QI5FS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.CssfgBVl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.gzqVXlyo.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BTZtMpNg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/style.DEBoon9T.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/size.BMEdtdjR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.ZJuK4sHN.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.BmwFNlYD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.CXuqZByk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Fuzling.DBFjSCgf.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.B0OUnOYE.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.Hri2PreG.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Fuzling.YUACq-jf.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -53,7 +53,7 @@
 			
 			<script>
 				{
-					__sveltekit_fvuys7 = {
+					__sveltekit_1jas659 = {
 						base: ""
 					};
 
@@ -62,8 +62,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DeGH4IwZ.js"),
-						import("/_app/immutable/entry/app.hMRDILeA.js")
+						import("/_app/immutable/entry/start.DGR6T058.js"),
+						import("/_app/immutable/entry/app.C9jusHoJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
