--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
 		
 		<link href="/_app/immutable/assets/0.XLspSEnm.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.CkbAh0GA.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DGR6T058.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.ByDNMYFq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DP78WgKa.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.WFYxZ_OH.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.BrhKfosJ.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C9jusHoJ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C1QvGXS5.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.DVjyfTb0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/props.nG8QI5FS.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/this.CssfgBVl.js">
@@ -20,8 +20,8 @@
 		<link rel="modulepreload" href="/_app/immutable/chunks/style.DEBoon9T.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/size.BMEdtdjR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.ZJuK4sHN.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.B0OUnOYE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.Hri2PreG.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.CraKRSzO.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.CB2qNluW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Fuzling.YUACq-jf.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
@@ -53,7 +53,7 @@
 			
 			<script>
 				{
-					__sveltekit_1jas659 = {
+					__sveltekit_1nghafz = {
 						base: ""
 					};
 
@@ -62,8 +62,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DGR6T058.js"),
-						import("/_app/immutable/entry/app.C9jusHoJ.js")
+						import("/_app/immutable/entry/start.DP78WgKa.js"),
+						import("/_app/immutable/entry/app.C1QvGXS5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
