--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/_app/immutable/assets/0.XLspSEnm.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.CUGMQgqk.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/2.BY05CfUz.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DP78WgKa.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.WFYxZ_OH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.BrhKfosJ.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C1QvGXS5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.DVjyfTb0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.nG8QI5FS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.CssfgBVl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.gzqVXlyo.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BTZtMpNg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/style.DEBoon9T.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/size.BMEdtdjR.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D9BMjzi3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DgoXT_I4.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.CirxRmYf.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BUuSSxbR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.HfZ4NBjI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.DjVJi-wC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.BDIiYcfu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.wyhNvfo7.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DXLdWq6b.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/style.BjRwJsFU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/size.CCb6gXoe.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.ZJuK4sHN.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/2.ROeiPaBV.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Fuzling.YUACq-jf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.CB2qNluW.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/nodes/2.C-xpsO-p.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Fuzling.DXvqPmMw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.BrMZngP1.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -39,11 +39,11 @@
 <!----><!--]--><!--]--><title>@ryanatkn/fuz_template</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!----><main class="svelte-aa2n4y"><section class="box"><header class="box pt_xl"><svg viewBox="0 0 100 100" aria-label="a friendly pixelated spider facing you" style="width: var(--icon_size_xl); height: var(--icon_size_xl);"><g><path d="m 25,81.200002 h 6.2 v -12.5 h 6.3 v -18.7 h -6.3 v 6.2 H 12.5 v 6.3 H 0 v -6.3 h 6.2 v -6.2 H 25 v -6.3 h 12.5 v -6.2 h -6.3 v -6.3 H 18.7 v -6.2 H 6.2 v -6.3 H 25 v 6.3 h 12.5 v -6.3 H 31.2 V 6.2 h 6.3 v 6.300002 h 6.2 V 31.200001 H 56.2 V 12.500002 h 6.3 V 6.2 h 6.2 v 12.500001 h -6.2 v 18.800001 h 6.2 v -12.5 h 12.5 v -12.5 h 12.5 v 6.2 h -6.2 v 12.5 H 75 v 12.5 h 6.2 v 6.3 h 12.5 v 6.2 h 6.299997 v 6.3 H 87.5 v -6.3 H 75 v -6.2 h -6.3 v 12.5 H 75 v 12.5 h 6.2 V 99.99999 H 75 V 81.200002 h -6.3 v -12.5 h -6.2 v -12.5 H 43.7 v 18.8 h -6.2 v 12.5 H 31.2 V 99.99999 H 25 Z" style="fill: #f67c4c;"></path></g></svg><!----> <h1 class="mt_xl2">fuz_template</h1></header> <!----><a  class="card svelte-2rjm44 link left" href="/about"><!--[--><div class="icon svelte-2rjm44"><!--[--><!--]--></div><!--]--> <div class="content svelte-2rjm44"><!---->about<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <button type="button" class="row py_md px_xl svelte-3v1vrg"><div class="size_xl5">🐰</div> <div class="mreow svelte-3v1vrg">mreow</div></button> <div class="mreows svelte-3v1vrg"><!--[--><!--]--></div><!----></main><!----><!----> <!--[!--><!--]--><!----><!--]--> <!--[--><div class="contextmenu_layout svelte-aif9y6" aria-hidden="true"></div><!--]--> <!--[!--><!--]--><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!----><main class="svelte-aa2n4y"><section class="box"><header class="box pt_xl"><svg viewBox="0 0 100 100" aria-label="a friendly pixelated spider facing you" style="width: var(--icon_size_xl); height: var(--icon_size_xl);"><g><path d="m 25,81.200002 h 6.2 v -12.5 h 6.3 v -18.7 h -6.3 v 6.2 H 12.5 v 6.3 H 0 v -6.3 h 6.2 v -6.2 H 25 v -6.3 h 12.5 v -6.2 h -6.3 v -6.3 H 18.7 v -6.2 H 6.2 v -6.3 H 25 v 6.3 h 12.5 v -6.3 H 31.2 V 6.2 h 6.3 v 6.300002 h 6.2 V 31.200001 H 56.2 V 12.500002 h 6.3 V 6.2 h 6.2 v 12.500001 h -6.2 v 18.800001 h 6.2 v -12.5 h 12.5 v -12.5 h 12.5 v 6.2 h -6.2 v 12.5 H 75 v 12.5 h 6.2 v 6.3 h 12.5 v 6.2 h 6.299997 v 6.3 H 87.5 v -6.3 H 75 v -6.2 h -6.3 v 12.5 H 75 v 12.5 h 6.2 V 99.99999 H 75 V 81.200002 h -6.3 v -12.5 h -6.2 v -12.5 H 43.7 v 18.8 h -6.2 v 12.5 H 31.2 V 99.99999 H 25 Z" style="fill: #f67c4c;"></path></g></svg><!----> <h1 class="mt_xl2">fuz_template</h1></header> <!----><a  class="card svelte-2rjm44 link left" href="/about"><!--[--><div class="icon svelte-2rjm44"><!--[--><!--]--></div><!--]--> <div class="content svelte-2rjm44"><!---->about<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <button type="button" class="row py_md px_xl svelte-3v1vrg"><div class="size_xl5">🐭</div> <div class="mreow svelte-3v1vrg">mreow</div></button> <div class="mreows svelte-3v1vrg"><!--[--><!--]--></div><!----></main><!----><!----> <!--[!--><!--]--><!----><!--]--> <!--[--><div class="contextmenu_layout svelte-aif9y6" aria-hidden="true"></div><!--]--> <!--[!--><!--]--><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1nghafz = {
+					__sveltekit_w83mwj = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DP78WgKa.js"),
-						import("/_app/immutable/entry/app.C1QvGXS5.js")
+						import("/_app/immutable/entry/start.D9BMjzi3.js"),
+						import("/_app/immutable/entry/app.BUuSSxbR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
