--- a/about.html
+++ b/about.html
@@ -9,20 +9,20 @@
 		<link href="/_app/immutable/assets/0.CUGMQgqk.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.CZFwu5eM.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/logos.CtNwUba2.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D3XOktUm.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CzeSTvxY.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.CPifUbz4.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DyxWzZ7s.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BqvBVD5E.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.DMnKHxAa.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.C3WnbkiB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CxNqbTfH.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BF2veLWP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/string.Ccf_hGHk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/size.dGxJRTW-.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.C_1oToM8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.AKcCJGgj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/logos.CmxoeiaJ.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Dupb0ixo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.EePsfCBt.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.2HKU53qj.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.5L9w5qTo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.8OpmpnOY.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.DeeNkUOl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.DDiqsOG4.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CmiQgULn.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BZB3Ks9K.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/string.DY1N6g31.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/size.BUvCbY9r.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.-U948ejY.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.BfiY1El-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/logos.BZuKOYgS.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_94lsvl = {
+					__sveltekit_10gokda = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D3XOktUm.js"),
-						import("/_app/immutable/entry/app.DyxWzZ7s.js")
+						import("/_app/immutable/entry/start.Dupb0ixo.js"),
+						import("/_app/immutable/entry/app.5L9w5qTo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
