--- a/about.html
+++ b/about.html
@@ -9,20 +9,20 @@
 		<link href="/_app/immutable/assets/0.CUGMQgqk.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.CZFwu5eM.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/logos.CtNwUba2.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Dupb0ixo.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.EePsfCBt.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.2HKU53qj.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.5L9w5qTo.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.8OpmpnOY.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.DeeNkUOl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.DDiqsOG4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CmiQgULn.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BZB3Ks9K.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/string.DY1N6g31.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/size.BUvCbY9r.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.-U948ejY.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.BfiY1El-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/logos.BZuKOYgS.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DGghhFTR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CdWh3IA-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.C_32D32W.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.9viYzAPB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.C5GGMMUe.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.DZFqe7zA.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.CnwuV5qJ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DnoF_M6p.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.D0ObWyZT.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/string.DZJYRgXK.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/size.B_iTFmEB.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.pMpmp-3u.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.1qO3KXiL.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/logos.DTIQjRcE.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_10gokda = {
+					__sveltekit_1inytee = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Dupb0ixo.js"),
-						import("/_app/immutable/entry/app.5L9w5qTo.js")
+						import("/_app/immutable/entry/start.DGghhFTR.js"),
+						import("/_app/immutable/entry/app.9viYzAPB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
