--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<link href="/_app/immutable/assets/0.CUGMQgqk.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/2.BY05CfUz.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/logos.CtNwUba2.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DGghhFTR.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CdWh3IA-.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DFts1tTI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DzBdbUtS.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.C_32D32W.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.9viYzAPB.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Cz6cpW9l.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.C5GGMMUe.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/props.DZFqe7zA.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/this.CnwuV5qJ.js">
@@ -20,9 +20,9 @@
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.D0ObWyZT.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.DZJYRgXK.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/size.B_iTFmEB.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/2.CQxOmXwy.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/2.CKxfhi8T.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/logos.DTIQjRcE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.1qO3KXiL.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.DS9IT3sa.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_1inytee = {
+					__sveltekit_1u84nq6 = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DGghhFTR.js"),
-						import("/_app/immutable/entry/app.9viYzAPB.js")
+						import("/_app/immutable/entry/start.DFts1tTI.js"),
+						import("/_app/immutable/entry/app.Cz6cpW9l.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
