--- a/about.html
+++ b/about.html
@@ -6,23 +6,23 @@
 		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/_app/immutable/assets/0.CUGMQgqk.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.vhdvK7LZ.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.CZFwu5eM.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/logos.CtNwUba2.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D4d2iAgZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.UUxnv-MW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.C_32D32W.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.De9_2LZ5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.C5GGMMUe.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.DZFqe7zA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.CnwuV5qJ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DnoF_M6p.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.DBpLOinF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/string.DZJYRgXK.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/size.B_iTFmEB.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.BzcjQyCu.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.D4pnOG4A.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/logos.DTIQjRcE.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BLCNC75p.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.3_Dg7phA.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.C_n3vbXC.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D-r2Anpu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.8Qe6rYoE.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.BdADNYwD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.B_iW_YFK.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DGM56pdO.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BTRK9_6l.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/string.httjS5GH.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/size.BvrQXxyX.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.ChdilnWx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.BEssJ1pU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/logos.B3QPC0m4.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_1qg3v3w = {
+					__sveltekit_1c6riik = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D4d2iAgZ.js"),
-						import("/_app/immutable/entry/app.De9_2LZ5.js")
+						import("/_app/immutable/entry/start.BLCNC75p.js"),
+						import("/_app/immutable/entry/app.D-r2Anpu.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
