--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
 		<link href="/_app/immutable/assets/0.vhdvK7LZ.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.CZFwu5eM.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/logos.CtNwUba2.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BeTsL1Ku.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BmWP77dt.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.NjrqsjDR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DpKsBmnZ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.C_n3vbXC.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BsxGsZa8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.e38Trlbf.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.8Qe6rYoE.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/props.BdADNYwD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/this.B_iW_YFK.js">
@@ -20,8 +20,8 @@
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.BTRK9_6l.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.httjS5GH.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/size.BvrQXxyX.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.DmPflukp.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.CxoBs_NG.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.BH--hPww.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.Cj6dXUpG.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/logos.B3QPC0m4.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_17txm2c = {
+					__sveltekit_r7qhob = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BeTsL1Ku.js"),
-						import("/_app/immutable/entry/app.BsxGsZa8.js")
+						import("/_app/immutable/entry/start.NjrqsjDR.js"),
+						import("/_app/immutable/entry/app.e38Trlbf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
