--- a/about.html
+++ b/about.html
@@ -6,22 +6,22 @@
 		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/_app/immutable/assets/0.vhdvK7LZ.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.CWl8RhDp.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.CZFwu5eM.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/logos.CtNwUba2.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.NjrqsjDR.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DpKsBmnZ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CtQ2VBcX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CjEQWRTo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.C_n3vbXC.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.e38Trlbf.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CrFsR3Fg.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.8Qe6rYoE.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/props.BdADNYwD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/this.B_iW_YFK.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DGM56pdO.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BTRK9_6l.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BYo8ir5C.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.httjS5GH.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/size.BvrQXxyX.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.BH--hPww.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.Cj6dXUpG.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.w7CBDoPs.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.D6rzFTWv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/logos.B3QPC0m4.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_r7qhob = {
+					__sveltekit_gfd5ip = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.NjrqsjDR.js"),
-						import("/_app/immutable/entry/app.e38Trlbf.js")
+						import("/_app/immutable/entry/start.CtQ2VBcX.js"),
+						import("/_app/immutable/entry/app.CrFsR3Fg.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
